[Spellcheck] Make cold mode idle time spellchecker less aggressive

This patch revises the cold mode idle time spellchecker that, it only
checks the editable element that is currently focused, instead of
checking the full document, so that the checker is less aggressive and
less resource consuming.

Bug: 824030, 716642
Change-Id: I1361b53b4dd3513252ef50d0356497c0a4054ecd
Reviewed-on: https://chromium-review.googlesource.com/1014472
Commit-Queue: Xiaocheng Hu <xiaochengh@chromium.org>
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551442}
Former-commit-id: 72ac5c08820272be7452ebd9181f9308bf62a223