third_party/blink/renderer/core/editing/spellcheck/spell_check_requester.h
@@ -90,8 +90,9 @@ class CORE_EXPORT SpellCheckRequester final
   ~SpellCheckRequester();
   void Trace(blink::Visitor*);
 
-  void RequestCheckingFor(const EphemeralRange&);
-  void RequestCheckingFor(const EphemeralRange&, int request_num);
+  // Returns true if a request is initiated. Returns false otherwise.
+  bool RequestCheckingFor(const EphemeralRange&);
+  bool RequestCheckingFor(const EphemeralRange&, int request_num);
   void CancelCheck();
 
   int LastRequestSequence() const { return last_request_sequence_; }
